<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.95"
        tools:layout_editor_absoluteX="192dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/MCBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/memoryclear"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:backgroundTint="#0097FF"/>

            <Button
                android:id="@+id/MRBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/memoryrecupere"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:backgroundTint="#0097FF"/>

            <Button
                android:id="@+id/MSBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/memorysave"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:backgroundTint="#0097FF"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/CEBNT"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cleare"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:backgroundTint="#DD2C00"/>

            <Button
                android:id="@+id/CBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:backgroundTint="#DD2C00"/>

            <Button
                android:id="@+id/exponentBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exponent"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/divideBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/divide"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seven"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/eightBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eight"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/nineBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nine"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/multiplyBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/multiply"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/fiveBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/sixBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/six"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/subtractBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subtract"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/twoBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/threeBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/addBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusminusBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plusminus"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/zeroBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/pointBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/point"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/equalBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equals"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:backgroundTint="#43A047"/>
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="false"
        android:gravity="end"
        android:hint="@string/display"
        android:inputType="none"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />
</androidx.constraintlayout.widget.ConstraintLayout>